DVB Access Module Does Not Set Modulation for ATSC
The current documentation for the dvb access module indicates that it is not necessary to set the modulation when using ATSC, yet I've discovered that if it isn't set, VLC is unable to display video.
Upon further investigation, I discovered that this was because the code that handles ATSC still calls DecodeModulation(), which defaults to returning QAM if no modulation is set on the command line! ATSC should always be 8VSB, AFAIK, so the attached patch fixes this problem.