Reworked DecodeModulation (close #1063)